Fixed more IDE warnings.